自定义袭击进度50%（还不能运行）